# fornalder

./: .gitignore  Cargo.toml  README.md
doc/: notes.txt
projects/: gnome-everything.modules  gnome-meta.json  gnome-repos
src/: cohorthist.rs  commitdb.rs  common.rs  gitcommitreader.rs  main.rs  plotter.rs  projectmeta.rs  statuslogger.rs
