[package]
name = "fornalder"
version = "0.1.0"
authors = ["Hans Petter Jansson <hpj@hpjansson.org>"]
edition = "2018"

[dependencies]
io = "0.0"
chrono = "0.4"
regex = "1.3"
error-chain = "0.12"
structopt = "0.3"
tempfile = "3.1"
serde_json = "1.0"

[dependencies.rusqlite]
version = "0.24"
features = ["bundled"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
