[package]
name = "fornalder"
version = "0.1.0"
authors = ["Hans Petter Jansson <hpj@hpjansson.org>"]
edition = "2018"

[dependencies]
chrono = "0.4"
error-chain = "0.12"
io = "0.0"
itertools = "0.9"
regex = "1.3"
serde_json = "1.0"
structopt = "0.3"
tempfile = "3.1"

[dependencies.rusqlite]
version = "0.24"
features = ["bundled"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
